src/components/css/Pomodore.module.css
.clockbox{
    display:flex;
    background:rgb(62, 63, 63);
    height:100vh;
    width:100vw;
    justify-content: space-around;
    align-items: center;
    padding: 100px;
    flex-wrap: no-wrap;
    flex-direction: column;
    color:white;
    animation: fadein 1s ease-in-out;

}
.message{
    font-size: 2rem;
    margin:0;
    text-align:center;
    width:100vw;
    
}
.subtext{
    font-size: 1rem;
    width:100vw;
    text-align: center;
}
.buttonsdiv{
    width:400px;
    height:150px;
    display: flex;
    justify-content: space-around;
    margin-top:30px;
    background-color:rgb(117, 119, 115);
    align-items: flex-end;
    align-items: baseline;
}

.box{
    min-width:400px;
    min-height:300px;
    background-color: darkkhaki;
    border: 5px solid white;
    border-radius:10%;
    box-shadow: 5px 10px 10px rgb(0, 0, 0);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size:4rem;
    color:rgb(49, 49, 49);
    font-weight:bold;
    margin-top:50px;
    animation: comefromleft 2s;
    position: relative;
}
.dropdown{
    width:100px;
    background-color: darkkhaki;
    padding:10px 20px;
    border:none;
    outline:none;
    border:1px solid rgb(44, 44, 44);
    cursor:pointer;
    border-radius:10%;
    
    font-size: 2rem;
}
.cycleno{
    position: absolute;
    bottom:10px;
}
.cyclebox{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
}


.timer{
    display: flex;
    flex-direction: column;
}
.startstop{
    min-width:40%;
    min-height:50%;
    font-size:2rem;
    background-color: rgb(241, 78, 78);
    border: 2px solid white;
    border-radius: 10px;
    color:#fff;
}

@media (max-width:750px){
    .box{
        min-width:300px;
    min-height:200px;
    }
    .buttonsdiv{
        margin-top: 50px;
        width:250px;
        height:250px;
        justify-content: space-around;
        align-items: baseline;
    }
    h5{
        margin-top: 10px;
    }
    .dropdown{
        height:50px;
        width:100px;
        font-size:1.1rem;

    }
    .startstop{
        font-size:1rem;
        height:50px;
        width:100px;
    }
}
@media (max-height:580px){
    .box{
        min-width:250px;
    min-height:120px;
    font-size: 2rem;
    border-radius: 20px;
    }
    .startstop{
        min-height:10px;
        min-width:50px;
    }
    .buttonsdiv{
        height:200px;
    }
    
}
@keyframes fadein{

    0%{
        opacity:0.5
    }
    100%{
opacity: 1;
    }
}
@keyframes comefromleft{
    0%{
        transform: translateX(-30%);
        opacity: 0;
        background-color: rgb(250, 173, 173);
    }
    100%{
        transform: translateX(0);
        opacity: 1;
    }
}

